--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bank
-spring.datasource.username=springuser
-spring.datasource.password=speaking.of.ray123
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bank
+#spring.datasource.username=springuser
+#spring.datasource.password=speaking.of.ray123
