--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bank
 #spring.datasource.username=springuser
 #spring.datasource.password=speaking.of.ray123
+server.port=${PORT:5000}
