--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 #spring.datasource.username=springuser
 #spring.datasource.password=speaking.of.ray123
 server.port=${PORT:5000}
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test
