--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bank
-#spring.datasource.username=springuser
-#spring.datasource.password=speaking.of.ray123
-server.port=${PORT:5000}
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bank
+spring.datasource.username=springuser
+spring.datasource.password=speaking.of.ray123
+#server.port=${PORT:5000}
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:test
